finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: Brett D Middleton'
+  github_nickname: 'brettdmiddleton'
+- name: 'Jack Gaarkeuken'
+  github_nickname: 'JackGaark'
